# frickoff

./: Cargo.toml  README.md  config_default.toml
src/: config.rs  functions.rs  main.rs  structs.rs
