[package]
name = "frickoff"
description = "A utility that tells configuration files to frick off and get deleted."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.195"
serde_json = "1.0.111"
toml = "0.8.8"
